--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         <button class="loader-button__passer" id="buttonPasser">passer</button>
     </div>
 
+    <div class="bandeau-info-importante">
+        <span class="info-importante__text">le mode mobile et ultra ne sont pas disponibles pour le moment de nombreux bugs sont encore présents et de nombreuses features ne sont pas encore disponible restez à l'écoute sur nos réseaux pour plus d'informations.</br> Tous les tests jusqu'à présent on a été réalisé en 2560 x 1440</span>
+    </div>
+
     <footer>
         <div class="footer">
             <button class="footer-button">
